deploy/k8s/deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: enseada
  labels:
    app.kubernetes.io/name: enseada
    app.kubernetes.io/component: server
spec:
  replicas: 5
  selector:
    matchLabels:
      app.kubernetes.io/name: enseada
      app.kubernetes.io/component: server
  template:
    metadata:
      labels:
        app.kubernetes.io/name: enseada
        app.kubernetes.io/component: server
    spec:
      restartPolicy: Always
      containers:
        - name: server
          image: enseada/enseada:edge
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 9623
          volumeMounts:
            - name: config
              mountPath: "/app/enseada/enseada.yml"
              subPath: enseada.yml
              readOnly: true
      volumes:
        - name: config
          secret:
            secretName: enseada-config
