deploy/k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: enseada
  annotations:
    kubernetes.io/ingress.class: nginx
#    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/limit-rps: '15'
spec:
#  tls:
#    - hosts:
#        - minikube
#      secretName: demo-enseda-crt
  rules:
    - host: minikube
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: enseada
                port:
                  name: http
    - host: containers.minikube
      http:
        paths:
            - path: /v2/
              pathType: Prefix
              backend:
                service:
                  name: enseada
                  port:
                    name: http
